create selection screen

--- a/app/src/main/res/layout/login_admin.xml
+++ b/app/src/main/res/layout/login_admin.xml
@@ -1,37 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/buttonPublicUse"
+    <EditText
+        android:id="@+id/inputUsernameAdmin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="150dp"
-        android:text="@string/public_use"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:hint="@string/username"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/buttonStoreRetailer"
+    <EditText
+        android:id="@+id/inputPasswordAdmin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/store_retailer"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:hint="@string/password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonPublicUse" />
+        app:layout_constraintTop_toBottomOf="@+id/inputUsernameAdmin" />
 
     <Button
-        android:id="@+id/buttonAdministrator"
+        android:id="@+id/buttonLoginAdmin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/administrator"
+        android:text="@string/sign_in"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonStoreRetailer" />
-
+        app:layout_constraintTop_toBottomOf="@+id/inputPasswordAdmin" />
 </androidx.constraintlayout.widget.ConstraintLayout>
