--- a/app/src/main/res/layout/fragment_admin_verify_list.xml
+++ b/app/src/main/res/layout/fragment_admin_verify_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AdminVerifyListFragment">
+    tools:context=".Admin.AdminVerifyListFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
