--- a/app/src/main/res/layout/login_store_retailer.xml
+++ b/app/src/main/res/layout/login_store_retailer.xml
@@ -9,9 +9,11 @@
 
     <EditText
         android:id="@+id/inputUsernameSR"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="60dp"
         android:layout_marginTop="150dp"
+        android:layout_marginEnd="60dp"
         android:ems="10"
         android:hint="Username"
         android:inputType="textPersonName"
@@ -21,19 +23,24 @@
 
     <EditText
         android:id="@+id/inputPasswordSR"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="60dp"
+        android:layout_marginEnd="60dp"
         android:ems="10"
-        android:inputType="textPassword"
         android:hint="Password"
+        android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/inputUsernameSR" />
 
     <Button
         android:id="@+id/buttonLoginSR"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="60dp"
+        android:layout_marginEnd="60dp"
+        android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
         android:text="@string/sign_in"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
