--- a/app/src/main/res/layout/confirmation.xml
+++ b/app/src/main/res/layout/confirmation.xml
@@ -125,6 +125,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView7"
+        android:scrollbars="vertical"
         tools:text="Content of Description" />
 
 
