--- a/app/src/main/res/layout/event_description.xml
+++ b/app/src/main/res/layout/event_description.xml
@@ -7,40 +7,44 @@
 
     <ImageView
         android:layout_width="match_parent"
-        android:src="@drawable/public_use"
+        android:id="@+id/descriptionImage"
+        tools:src="@drawable/public_use"
         tools:scaleType="centerCrop"
         android:layout_height="400dp"/>
 
 <!--    Title-->
     <TextView
+        android:id="@+id/descriptionTitle"
         android:layout_width="match_parent"
-        android:layout_marginTop="20dp"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="30dp"
+        android:layout_marginTop="20dp"
         android:layout_marginRight="30dp"
         android:textAlignment="center"
-        tools:text="Title bin title no title ni otaku"
-        android:textSize="40sp"
         android:textAllCaps="true"
-        android:layout_height="wrap_content"/>
+        android:textSize="40sp"
+        tools:text="Title bin title no title ni otaku" />
 
 <!--    Date-->
     <TextView
+        android:id="@+id/descriptionDate"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="30dp"
         android:maxWidth="350dp"
         android:textAlignment="center"
-        android:layout_margin="30dp"
         android:textSize="14sp"
-        tools:text="0 Jan BigBang until 0 Dec BigBang"
-        android:layout_height="wrap_content"/>
+        tools:text="0 Jan BigBang until 0 Dec BigBang" />
 
 <!--    Description-->
     <TextView
+        android:id="@+id/descriptionContent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
         android:layout_margin="13dp"
+        android:maxWidth="350dp"
+        android:textAlignment="center"
         android:textSize="16sp"
-        android:maxWidth="350dp"/>
+        tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." />
 
 </LinearLayout>
