--- a/app/src/main/res/drawable-anydpi/ic_action_name.xml
+++ b/app/src/main/res/drawable-anydpi/ic_action_name.xml
@@ -3,9 +3,9 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="#333333"
-    android:alpha="0.6">
+    android:tint="#FFFFFF"
+    android:alpha="0.8">
     <path
-        android:pathData="M16.21,4.16l4,4v-4zM20.21,16.16l-4,4h4zM8.21,20.16l-4,-4v4zM4.21,8.16l4,-4h-4zM17.16,7.21c-2.73,-2.73 -7.17,-2.73 -9.9,0s-2.73,7.17 0,9.9 7.17,2.73 9.9,0 2.73,-7.16 0,-9.9zM16.06,16.01c-2.13,2.13 -5.57,2.13 -7.7,0s-2.13,-5.57 0,-7.7 5.57,-2.13 7.7,0 2.13,5.57 0,7.7z"
-        android:fillColor="#010101"/>
+        android:fillColor="#FF000000"
+        android:pathData="M12,2C8.13,2 5,5.13 5,9c0,5.25 7,13 7,13s7,-7.75 7,-13c0,-3.87 -3.13,-7 -7,-7zM12,11.5c-1.38,0 -2.5,-1.12 -2.5,-2.5s1.12,-2.5 2.5,-2.5 2.5,1.12 2.5,2.5 -1.12,2.5 -2.5,2.5z"/>
 </vector>
