--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#CA102A</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#1E39CF</color>
+    <color name="colorPrimaryDark">#1E39CF</color>
+    <color name="colorAccent">#926173</color>
     <color name="whiteColor">#ffffff</color>
     <color name="background">#C4C0C0</color>
     <color name="backgroundBox">#FFFFFF</color>
