--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -12,6 +12,13 @@
         android:src="@drawable/ic_action_name"
         android:layout_marginTop="20dp"
         />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:text="Welcome, ADMIN"
+        android:textColor="@color/cardview_light_background"
+        android:textStyle="bold"/>
 
 
 </LinearLayout>
