--- a/app/src/main/res/layout/login_store_retailer.xml
+++ b/app/src/main/res/layout/login_store_retailer.xml
@@ -15,8 +15,10 @@
         android:layout_marginTop="60dp"
         android:layout_marginEnd="60dp"
         android:ems="10"
+        android:drawableStart="@drawable/ic_person_black_24dp"
         android:hint="Username"
         android:inputType="textPersonName"
+        android:textAlignment="center"
         android:textColor="#F5F1F1"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -28,10 +30,12 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="60dp"
+        android:drawableStart="@drawable/ic_vpn_key_black_24dp"
         android:layout_marginEnd="60dp"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
+        android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
